<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="234dp"
                android:src="@drawable/sidestretch" />

            <Button
                android:id="@+id/time"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="115dp"
                android:background="@drawable/button_bg_round_2"
                android:padding="15dp"
                android:text="01:00"
                android:textSize="28sp"
                android:textStyle="bold"
                app:backgroundTint="@color/purple_200" />


            <Button
                android:id="@+id/startbutton"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="08dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="08dp"
                android:background="@drawable/btn"
                android:gravity="center"
                android:text="START"
                android:textColor="#FFF"
                android:textSize="25dp"
                android:textStyle="bold"
                app:backgroundTint="@color/purple_200"

                />

            <TextView
                android:id="@+id/instruction"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="08dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="08dp"
                android:layout_weight="0"
                android:background="@drawable/btn"
                android:gravity="center|bottom"
                android:padding="7dp"
                android:text="Instruction:"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="25sp"
                android:textStyle="bold"
                app:backgroundTint="@color/purple_200"

                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_200"

                app:cardCornerRadius="20dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="205dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/purple_200"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFF"
                        android:text="Raise your right arm overhead and bend your upper body to the left in a reaching motion. Keep your upper body facing straight ahead—don't twist it to the side as you bend. Make sure you feel the muscles gently stretch all along your side from your lower back up to your shoulder. Hold the stretch for 20 seconds."
                        android:textColor="@color/purple_200"
                        android:textSize="20dp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>