...
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:id="@+id/FIRST_ACTIVITY_GROUP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dp"
                android:layout_marginTop="15.0dp"
                android:background="@drawable/backgroundcrop"
                android:alpha="0.7"
...

                </LinearLayout>

            </LinearLayout>

              <Button
                  android:id="@+id/startyoga1"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10.0dp"
                  android:background="@drawable/btn"
                  android:text="Get started"
                  app:backgroundTint="@color/purple_200"
...
