<resources>
    <string name="app_name">Yoga App</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="signuphere">sign up here</string>
    <string name="username">username</string>
    <string name="signup">sign up</string>
    <string name="firstname">first name</string>
    <string name="lastname">last name</string>
    <string name="email">email</string>
    <string name="loginhere">login here</string>
</resources>