...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress"
            android:background="@drawable/btn"
            app:rippleColor="@color/purple_200" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:fontFamily="@font/poppinsmedium"
            android:text="@string/loginhere"
...
